--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
 # Ignore compiled executables
-*.exe
-*.out
-*.o
+*
+!*.cpp
 
-# Ignore temporary files
-*.log
-*.tmp
-
-# Ignore build directories
-bin/
-build/
